plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.4'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
}

def lombokVersion = '1.18.24'

group = 'uk.gov.digital.ho.hocs'
sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom 'org.camunda.bpm:camunda-bom:7.17.0'
    }
}

dependencies {

    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude(module: 'spring-boot-starter-tomcat')
    }
    implementation('org.springframework.boot:spring-boot-starter-undertow')
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-json')
    implementation('org.springframework.boot:spring-boot-starter-cache')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('com.github.ben-manes.caffeine:caffeine')
    implementation 'com.amazonaws:aws-java-sdk-sns:1.12.149'

    implementation('net.logstash.logback:logstash-logback-encoder:7.2')

    implementation('org.camunda.bpm:camunda-engine-spring:7.17.0')
    implementation('com.fasterxml.uuid:java-uuid-generator:4.0.1')
    implementation('commons-codec:commons-codec:1.15')
    implementation('org.apache.httpcomponents:httpclient:4.5.13')

    implementation 'org.postgresql:postgresql:42.5.0'

    implementation "org.projectlombok:lombok:${lombokVersion}"
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.springframework:spring-context-indexer:5.3.23"

    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"

    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation('org.assertj:assertj-core')

    testImplementation('org.camunda.bpm:camunda-bpm-assert')
    testImplementation('org.camunda.community.mockito:camunda-platform-7-mockito:6.17.1')
    testImplementation('org.camunda.bpm.extension:camunda-bpm-assert-scenario:1.1.1')
    testImplementation('org.camunda.community.process_test_coverage:camunda-process-test-coverage-junit4-platform-7:2.0.0')

    testImplementation('com.h2database:h2')
}

test {
    maxHeapSize = "1024m"
}

jar {
    enabled = false
}
